--- a/app/src/main/res/layout/fragment_add_forum.xml
+++ b/app/src/main/res/layout/fragment_add_forum.xml
@@ -49,6 +49,7 @@
                 android:src="@drawable/ic_laptop" />
 
             <TextView
+                android:id="@+id/laptopTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -78,6 +79,7 @@
                 android:src="@drawable/ic_smartphone" />
 
             <TextView
+                android:id="@+id/smartphoneTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -107,6 +109,7 @@
                 android:src="@drawable/ic_computer" />
 
             <TextView
+                android:id="@+id/computerTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
