--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
-        android:background="@drawable/ic_action_bar_2"
+        android:background="@drawable/action_bar"
         android:layout_height="150dp" />
 
     <TextView
