--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:background="@drawable/action_bar_3"
+            android:background="@drawable/action_bar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
