--- a/app/src/main/res/layout/activity_all_forums.xml
+++ b/app/src/main/res/layout/activity_all_forums.xml
@@ -49,6 +49,7 @@
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:inputType="text"
             android:background="@drawable/background_search_bar"
             android:padding="@dimen/activity_vertical_margin"
             android:textCursorDrawable="@drawable/color_cursor"
