--- a/app/src/main/res/layout/fragment_add_forum.xml
+++ b/app/src/main/res/layout/fragment_add_forum.xml
@@ -193,11 +193,24 @@
                         android:ems="10"
                         android:fontFamily="@font/firasans"
                         android:hint="Tag"
-                        android:inputType="textMultiLine"
+                        android:inputType="text"
                         android:padding="@dimen/activity_vertical_margin"
                         android:textColor="@android:color/black"
                         android:textCursorDrawable="@drawable/color_cursor"
                         android:textSize="14sp" />
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/rowChip"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_marginTop="@dimen/activity_vertical_margin">
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/chipGroup" />
                 </TableRow>
 
             </TableLayout>
